
    YARN-2498. Respect labels in preemption policy of capacity scheduler for
    inter-queue preemption. (Wangda Tan via jianhe)

    YARN-2619. Added NodeManager support for disk io isolation through cgroups.
    (Varun Vasudev and Wei Yan via vinodkv)

    YARN-3448. Added a rolling time-to-live LevelDB timeline store implementation.
    (Jonathan Eagles via zjshen)

  IMPROVEMENTS

    YARN-1880. Cleanup TestApplicationClientProtocolOnHA
    (ozawa via harsh)

    YARN-3243. CapacityScheduler should pass headroom from parent to children
    to make sure ParentQueue obey its capacity limits. (Wangda Tan via jianhe)

    YARN-3356. Capacity Scheduler FiCaSchedulerApp should use ResourceUsage to
    track used-resources-by-label. (Wangda Tan via jianhe)

    YARN-2868. FairScheduler: Metric for latency to allocate first container 
    for an application. (Ray Chiang via kasha)

    YARN-3397. yarn rmadmin should skip -failover. (J.Andreina via kasha)

    YARN-2495. Allow admin specify labels from each NM (Distributed 
    configuration for node label). (Naganarasimha G R via wangda)

    YARN-3248. Display count of nodes blacklisted by apps in the web UI.
    (Varun Vasudev via xgong)

    YARN-2901. Add errors and warning metrics page to RM, NM web UI. 
    (Varun Vasudev via wangda)

    YARN-3294. Allow dumping of Capacity Scheduler debug logs via
    web UI for a fixed time period. (Varun Vasudev via xgong)

    YARN-3293. Track and display capacity scheduler health metrics
    in web UI. (Varun Vasudev via xgong)

    YARN-3394. Enrich WebApplication proxy documentation. (Naganarasimha G R
    via jianhe)

    YARN-3404. Display queue name on application page. (Ryu Kobayashi via jianhe)

    YARN-2696. Queue sorting in CapacityScheduler should consider node label.
    (Wangda Tan via jianhe)

    YARN-3451. Display attempt start time and elapsed time on the web UI.
    (Rohith Sharmaks via jianhe)
